tests/application/istio_settings/retry-minimal-assert.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: retry-minimal-ingress
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  gateways:
    - retry-minimal-ingress-2938b1a522652310
  hosts:
    - retry.com
  http:
    - match:
        - port: 80
      redirect:
        redirectCode: 308
        scheme: https
    - route:
        - destination:
            host: retry-minimal
            port:
              number: 8080
