tests/application/istio_settings/retry-minimal-error.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: retry-minimal
spec:
  image: image
  port: 8080
  ingresses:
    - retry.com
  redirectToHTTPS: true
  istioSettings:
    retries:
      attempts: 1
